# fission-matrix

./: .gitignore  README.md  pyproject.toml
assembly/: main.py  post.ipynb
pincell/: pincell.py  post.ipynb
sphere/: post.ipynb  sphere.py
